# esp-rust-camera

./: Cargo.toml  LICENSE  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: camera.rs  main.rs  server.rs  wifi.rs
