[package]
name = "esp-rust-camera"
version = "0.1.0"
authors = ["Benjamin Romano <bromano2100@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.75"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
esp-idf-sys = { version = "0.33.7", default-features = false }
esp-idf-hal = { version = "0.42.5", default-features = false }
const_format = "0.2.32"
anyhow = "1.0.79"
toml-cfg = "0.1.3"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.1.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.0.6" }
bindings_header = "bindings.h"
bindings_module = "camera"
